--- a/Front/project_Full/src/js/pages/Travel/TravelPackList/TravelPackList.css
+++ b/Front/project_Full/src/js/pages/Travel/TravelPackList/TravelPackList.css
@@ -1,66 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Cute+Font&family=Gaegu:wght@300&family=Nanum+Pen+Script&family=Orbit&family=Single+Day&display=swap");
 
 /*헤더 제목 스타일*/
 .traval-pack-list-header {
-    margin-top: 3%;
-    margin-bottom: 3%;
-    text-align: center;
-    font-family: 'Single Day', cursive;
-    font-size: 54px;
-    color: #333;
-    /* background-color: rgb(248, 249, 250); */
-
+  margin-top: 3%;
+  margin-bottom: 3%;
+  text-align: center;
+  font-family: "Single Day", cursive;
+  font-size: 54px;
+  color: #333;
+  /* background-color: rgb(248, 249, 250); */
 }
 
 /*헤더 제목 아이콘*/
 .custom-hotel-icon {
-    font-size: large;
-    color: skyblue;
+  font-size: large;
+  color: skyblue;
 }
 
 .MuiDataGrid-cell {
-    font-family: 'Cute Font', sans-serif;
-    font-size: 20px;
-    /* justify-content: center !important; */
-    align-items: center !important;
+  font-family: "Cute Font", sans-serif;
+  font-size: 20px;
+  /* justify-content: center !important; */
+  align-items: center !important;
 }
-
 
 /*예약하기 버튼 폰트*/
 .button-font {
-    font-family: 'Cute Font', sans-serif;
-    font-size: 24px;
-
+  font-family: "Cute Font", sans-serif;
+  font-size: 24px;
 }
-
-
 
 /* <div의 클래스 이름> */
 /* ------------------------------------------ */
 /* 패키지 여행 목록의 스타일 */
 .PackageTravelList {
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    text-align: center;
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-bottom: 3%;
+  margin-top: 3%;
+  text-align: center;
 
-    /* border: 1px solid; */
-
+  /* border: 1px solid; */
 }
 
 /* <여행 정보> */
 .travelinformation {
-    padding: 10px;
-    text-align: left;
-    margin-left: 60px;
+  padding: 10px;
+  text-align: left;
+  margin-left: 60px;
 }
 
 /* 이미지설정 */
 .custom-image {
-    width: 260px;
-    height: auto;
+  width: 260px;
+  height: 260px;
 }
 
 /* ------------------------------------------ */
@@ -69,104 +62,95 @@
 /* ------------------------------------------ */
 /* 데이터 그리드 셀의 선 스타일 */
 .MuiDataGrid-cell {
-    /* border: 1px solid #ccc; */
-    /* 셀에 대한 스타일 */
+  /* border: 1px solid #ccc; */
+  /* 셀에 대한 스타일 */
 }
-
 
 /* 데이터 그리드의 컬럼헤더 숨기기 */
 .hideHeaders .MuiDataGrid-columnHeaders,
 .hideHeaders .MuiDataGrid-columnHeader {
-    display: none;
-
+  display: none;
 }
 
 .hideHeaders .MuiDataGrid-virtualScroller {
-    margin-top: 0 !important;
-    /* background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2); */
-    /* background: #afeeee, #87ceeb, #b0e0e6, #b0c4de; */
-    background: linear-gradient(to right, #fbfbfc, #dbfeff);
-    border: 3px solid #a0a0a0;
-    border-radius: 8px;
-
+  margin-top: 0 !important;
+  /* background: linear-gradient(to right,  #2c4285, #415d9c, #8088B2, #C7B0C2); */
+  /* background: #afeeee, #87ceeb, #b0e0e6, #b0c4de; */
+  background: linear-gradient(to right, #fbfbfc, #dbfeff);
+  border: 3px solid #a0a0a0;
+  border-radius: 8px;
 }
 
 /* 참고: https://stackoverflow.com/questions/76463098/how-to-remove-column-header-of-mui-v5-datagrid-in-react-ts */
 /* ------------------------------------------ */
 /*데이터 그리드 셀을 선택했을 때 테두리 삭제*/
 .MuiDataGrid-cell:focus {
-    outline: none !important;
+  outline: none !important;
 }
-
-
-
 
 /* 이미지 */
 .image-cell {
-    /* text-align: center; */
-    border: 1px solid black;
-    margin-left: 10px;
+  /* text-align: center; */
+  border: 1px solid black;
+  margin-left: 10px;
 }
 
 /* 팝업창(모달) */
 .custom-modal {
-    position: fixed;
-    top: 50%;
-    /* 화면 상단에서 세로 중앙 */
-    left: 50%;
-    /* 화면 좌측에서 가로 중앙 */
-    transform: translate(-50%, -50%);
-    /* 모달을 가운데 정렬 */
-    width: 30%;
-    /* height: 20%; */
-    background-color: white;
-    border: 1px solid #ccc;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
-    /* z-index: 1000; */
-    /* 다른 요소 위에 표시되도록 설정 */
+  position: fixed;
+  top: 50%;
+  /* 화면 상단에서 세로 중앙 */
+  left: 50%;
+  /* 화면 좌측에서 가로 중앙 */
+  transform: translate(-50%, -50%);
+  /* 모달을 가운데 정렬 */
+  width: 30%;
+  /* height: 20%; */
+  background-color: white;
+  border: 1px solid #ccc;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
+  /* z-index: 1000; */
+  /* 다른 요소 위에 표시되도록 설정 */
 }
-
 
 /* 체크박스 스타일 */
 .checkbox-container {
-    display: flex;
-    flex-direction: row;
-    
+  display: flex;
+  flex-direction: row;
 }
 
 .checkbox-container label {
-    
-    margin-right: 20px;
-    /* 각 라벨 사이의 간격 조절 */
-    font-family: 'Cute Font', sans-serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+  margin-right: 20px;
+  /* 각 라벨 사이의 간격 조절 */
+  font-family: "Cute Font", sans-serif;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-.search-fes{
-    width: 200px;
-    margin-left: 34.2%;
+.search-fes {
+  width: 200px;
+  margin-left: 34.2%;
 }
 
-.checkbox-container label .search-btn{
-    margin: 20px 0px 0px 0px;
-    margin-right: 10px;
+.checkbox-container label .search-btn {
+  margin: 20px 0px 0px 0px;
+  margin-right: 10px;
 }
 
-.search-festival{
-    margin-right: 15px;
+.search-festival {
+  margin-right: 15px;
 }
 
-.search-container{
-    width: 500px;
-    margin-left: 10%;
+.search-container {
+  width: 500px;
+  margin-left: 10%;
 }
 
-.search-button{
-    height: 45px;
+.search-button {
+  height: 45px;
 }
 
-.search-btn-title{
-    font-size: 20px;
-    font-family: 'Cute Font', sans-serif;
+.search-btn-title {
+  font-size: 20px;
+  font-family: "Cute Font", sans-serif;
 }
