--- a/Front/project_Full/src/js/pages/home/Home.css
+++ b/Front/project_Full/src/js/pages/home/Home.css
@@ -7,12 +7,6 @@
   margin-top: 30px;
   width: 60%;
 }
-.imgGroup img {
-  width: 33.3%;
-  height: 400px;
-  background-size: contain;
-  float: left;
-}
 .containerMain {
   width: 100%;
   height: 450px;
@@ -36,28 +30,35 @@
   margin-top: 20px;
 }
 
-.Homeimg{
-  margin-top: 30px;
+.Homeimg {
   float: left;
-  width:40%;
+  width: 40%;
   height: 200px;
 }
 
-.Homeimg > img{
-  width:100%;
-  height: 110%;
-  object-fit:fill;
-}
-
-.Homeimg2{
-  margin-top: -190px;
+.Homeimg2 {
+  margin-top: -280px;
   float: left;
-  width:38%;
+  width: 38%;
   height: 200px;
 }
 
-.Homeimg2 > img{
-  width:100%;
-  height: 95%;
-  object-fit:fill;
+.imgGroup {
+  width: 100%;
+  margin-top: 40px;
+  background-size: contain;
+  float: left;
+}
+
+.imgGroup2 {
+  margin-left: 280px;
+  width: 40%;
+  margin-top: 80px;
+  background-size: contain;
+  float: left;
+}
+
+.slide-img {
+  width: 200px;
+  height: 200px;
 }
